--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "fs": "0.0.1-security",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.6"
   },
   "devDependencies": {
